--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -170,3 +170,16 @@ a:hover{
 
 }
 
+]
+/* Estilos de galeria  */
+/* Fotos */
+.prueba{
+    width: 420px;
+    height: 280px;
+}
+
+.prueba1{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
